--- a/webclient/package.json
+++ b/webclient/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "5.3.0",
     "onsenui": "^2.10.5",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
